--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>hello<h1></h1>
+<!DOCTYPE html>
+<html lang="en">
+  <body>
+    <main>
+      <h1>Hello world</h1>
+      <p>Here we go</p>
+    </main>
+  </body>
+</html>
