--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset "UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SuomiPractice HTML</title>
+  </head>
   <body>
+    <header>
+      <h1>Suomi Practice</h1>
+    </header>
     <main>
       <h1>Hello world</h1>
       <p>Here we go</p>
