--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <body>
     <header>
       <h1>Suomi Practice</h1>
+      <nav>
+        <menu>
+          <li><a href="index.html">Login</a></li>
+          <li><a href="practice.html">Practice</a></li>
+          <li><a href="progress.html">Progress</a></li>
+        </menu>
+      </nav>
     </header>
     <main>
     </main>
