--- a/progress.html
+++ b/progress.html
@@ -5,4 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Progress</title>
   </head>
+  <body>
+    <header>
+        <h1>Suomi Practice</h1>
+    </header>
+  </body>
 </html>
