added image and login

--- a/index.html
+++ b/index.html
@@ -15,8 +15,22 @@
           <li><a href="progress.html">Progress</a></li>
         </menu>
       </nav>
+      <hr />
     </header>
     <main>
+      <div class="container">
+        <img src="https://media.architecturaldigest.com/photos/58f62c148bfbf566da78abef/16:9/w_2240,c_limit/Finland.jpg" width="100%">
+        <div class="text-block">
+          <h2>Login Here</h2>
+          <form method="get" action="practice.html">
+            <label for="name">Name</label>
+            <input type="text" id="name" placeholder="Enter your name" />
+            <button type="submit">Login</button>
+          </form>
+
+
+        </div> 
+      </div>
     </main>
   </body>
 </html>
