--- a/index.html
+++ b/index.html
@@ -23,14 +23,16 @@
         <div class="text-block">
           <h2>Login Here</h2>
           <form method="get" action="practice.html">
-            <label for="name">Name</label>
+            <label for="name">Name:</label>
             <input type="text" id="name" placeholder="Enter your name" />
             <button type="submit">Login</button>
           </form>
-
-
         </div> 
       </div>
     </main>
+    <footer>
+      <hr />
+      <a href="https://github.com/myriambyu/startup.git">GitHub</a>
+    </footer>
   </body>
 </html>
