--- a/practice.html
+++ b/practice.html
@@ -16,5 +16,17 @@
             </menu>
           </nav>
     </header>
+    <main>
+        <div class="row">
+            <div class="column">
+                <img src="https://turbifycdn.com/ty/cdn/finnstyle/450buns_highres_by_JuliaKivela_P7210105.jpg" alt="Food" width: 100%>
+                <p>Food</p>
+            </div>
+            <div class="column">
+                <img src="https://www.color-hex.com/palettes/98057.png" alt="Colors" width: 100%>
+                <p>Colors</p>
+            </div>
+        </div>
+    </main>
   </body>
 </html>
