added progress bar

--- a/practice.html
+++ b/practice.html
@@ -26,6 +26,10 @@
                 <img src="https://www.color-hex.com/palettes/98057.png" alt="Colors" width: 100%>
                 <p>Colors</p>
             </div>
+            <div class = "column">
+                <img src ="https://media.istockphoto.com/id/1402134774/photo/professional-road-cyclist-on-a-training-ride.jpg?s=612x612&w=0&k=20&c=CB2o_DXMgH15MLa1CEqWwZVtVb3rpRgejV3UFnUwF_U=" alt="Verbs" width: 100%>
+                <p>Verbs</p>
+            </div>
         </div>
     </main>
   </body>
