--- a/progress.html
+++ b/progress.html
@@ -16,5 +16,11 @@
             </menu>
           </nav>
     </header>
+    <main>
+            <div class="progress">
+                <label for="progress">Progress of entire course:</label>
+                <progress id="progress" max="100" value="25"></progress>
+            </div>
+    </main>
   </body>
 </html>
