--- a/progress.html
+++ b/progress.html
@@ -17,10 +17,27 @@
           </nav>
     </header>
     <main>
-            <div class="progress">
-                <label for="progress">Progress of entire course:</label>
-                <progress id="progress" max="100" value="25"></progress>
-            </div>
+        <div class="progress">
+            <label for="progress">Progress of entire course:</label>
+            <progress id="progress" max="100" value="25"></progress>
+        </div>
+        <ul>
+            <li>
+                <label for="food-progress">Food: &nbsp; </label>
+                <progress id="food-progress" max="100" value="25"></progress> 
+                <p>25%</p>
+            </li>
+            <li>
+                <label for="colors-progress">Colors:</label>
+                <progress id="colors-progress" max="100" value="25"></progress>
+                <p>25%</p>
+            </li>
+            <li>
+                <label for="verbs-progress">Verbs: &nbsp;</label>
+                <progress id="verbs-progress" max="100" value="25"></progress>
+                <p>25%</p>
+            </li>
+        </ul>
     </main>
   </body>
 </html>
