--- a/progress.html
+++ b/progress.html
@@ -21,21 +21,50 @@
             <label for="progress">Progress of entire course:</label>
             <progress id="progress" max="100" value="25"></progress>
         </div>
+        <section class="progress-table">
+            <table id="table">
+              <tr>
+                <td>
+                    <label for="food-progress">Food: &nbsp; </label>
+                <progress id="food-progress" max="100" value="25"></progress> 
+                <p>25%</p>
+                </td>
+                <td>
+                    <a href="practice.html">Practice</a>
+                </td>
+                <td>
+                    <p>Users Mastered: 0</p>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                    
+                </td>
+                <td>table</td>
+                <td>table</td>
+              </tr>
+            </table>
+          </section>
         <ul>
             <li>
                 <label for="food-progress">Food: &nbsp; </label>
                 <progress id="food-progress" max="100" value="25"></progress> 
                 <p>25%</p>
+                <a href="practice.html">Practice</a>
             </li>
+            <br>
             <li>
                 <label for="colors-progress">Colors:</label>
                 <progress id="colors-progress" max="100" value="25"></progress>
                 <p>25%</p>
+                <a href="practice.html">Practice</a>
             </li>
+            <br>
             <li>
                 <label for="verbs-progress">Verbs: &nbsp;</label>
                 <progress id="verbs-progress" max="100" value="25"></progress>
                 <p>25%</p>
+                <a href="practice.html">Practice</a>
             </li>
         </ul>
     </main>
