--- a/practice.html
+++ b/practice.html
@@ -15,7 +15,12 @@
               <li><a href="progress.html">Progress</a></li>
             </menu>
           </nav>
+          <div class="users">
+            User-name:
+            <span class="User-name">Unknown</span>
+          </div>
     </header>
+    <hr />
     <main>
         <div class="row">
             <div class="column">
@@ -33,4 +38,8 @@
         </div>
     </main>
   </body>
+  <footer>
+    <hr />
+    <a href="https://github.com/myriambyu/startup.git">GitHub</a>
+  </footer>
 </html>
