--- a/progress.html
+++ b/progress.html
@@ -67,4 +67,8 @@
           </section>
     </main>
   </body>
+  <footer>
+    <hr />
+    <a href="https://github.com/myriambyu/startup.git">GitHub</a>
+  </footer>
 </html>
