--- a/flashcards.html
+++ b/flashcards.html
@@ -17,6 +17,16 @@
             </nav>
         </header>
         <hr />
+        <main>
+            <a href="#" class="back round">&#8249;</a>
+            <button type="less">See less</button>
+            <div class="flashcard">
+                <h3>rakkaus</h3>
+                <button id = "flip" onclick = "changeImage()"> See translation </button>
+            </div>
+            <button type="more">See more</button>
+            <a href="#" class="next round">&#8250;</a>
+        </main>
     </body>
     <footer>
         <hr />
