--- a/practice.html
+++ b/practice.html
@@ -24,8 +24,8 @@
     <main>
         <div class="row">
             <div class="column">
-                <img src="https://turbifycdn.com/ty/cdn/finnstyle/450buns_highres_by_JuliaKivela_P7210105.jpg" alt="Food" width: 100%>
-                <p>Food</p>
+                <a href="flashcards.html"><img src="https://turbifycdn.com/ty/cdn/finnstyle/450buns_highres_by_JuliaKivela_P7210105.jpg" alt="Food" width: 100%></a>
+                <a href="flashcards.html"><p>Food</p></a>
             </div>
             <div class="column">
                 <img src="https://www.color-hex.com/palettes/98057.png" alt="Colors" width: 100%>
