--- a/flashcards.html
+++ b/flashcards.html
@@ -22,7 +22,7 @@
             <button type="less">See less</button>
             <div class="flashcard">
                 <h3>rakkaus</h3>
-                <button id = "flip" onclick = "changeImage()"> See translation </button>
+                <button id = "flip" onclick = "changeImage()"> Translation </button>
             </div>
             <button type="more">See more</button>
             <a href="#" class="next round">&#8250;</a>
