--- a/practice.html
+++ b/practice.html
@@ -28,12 +28,12 @@
                 <a href="flashcards.html"><p>Food</p></a>
             </div>
             <div class="column">
-                <img src="https://www.color-hex.com/palettes/98057.png" alt="Colors" width: 100%>
-                <p>Colors</p>
+                <a href="flashcards.html"><img src="https://www.color-hex.com/palettes/98057.png" alt="Colors" width: 100%></a>
+                <a href="flashcards.html"><p>Colors</p></a>
             </div>
             <div class = "column">
-                <img src ="https://media.istockphoto.com/id/1402134774/photo/professional-road-cyclist-on-a-training-ride.jpg?s=612x612&w=0&k=20&c=CB2o_DXMgH15MLa1CEqWwZVtVb3rpRgejV3UFnUwF_U=" alt="Verbs" width: 100%>
-                <p>Verbs</p>
+                <a href="flashcards.html"><img src ="https://media.istockphoto.com/id/1402134774/photo/professional-road-cyclist-on-a-training-ride.jpg?s=612x612&w=0&k=20&c=CB2o_DXMgH15MLa1CEqWwZVtVb3rpRgejV3UFnUwF_U=" alt="Verbs" width: 100%></a>
+                <a href="flashcards.html"><p>Verbs</p></a>
             </div>
         </div>
     </main>
