--- a/progress.html
+++ b/progress.html
@@ -35,7 +35,10 @@
                     <a href="practice.html">Practice</a>
                 </td>
                 <td>
-                    <p>Users Mastered: 0</p>
+                    <div>
+                        <label for="users-mastered">Total users mastered: </label>
+                        <input type="text" id="count" value="0" readonly />
+                    </div>
                 </td>
               </tr>
               <tr>
@@ -48,7 +51,10 @@
                     <a href="practice.html">Practice</a>
                 </td>
                 <td>
-                    <p>Users Mastered: 0</p>
+                     <div>
+                        <label for="users-mastered">Total users mastered: </label>
+                        <input type="text" id="count" value="0" readonly />
+                    </div>
                 </td>
               </tr>
               <tr>
@@ -61,7 +67,10 @@
                     <a href="practice.html">Practice</a>
                 </td>
                 <td>
-                    <p>Users Mastered: 0</p>
+                    <div>
+                        <label for="users-mastered">Total users mastered: </label>
+                        <input type="text" id="count" value="0" readonly />
+                    </div>
                 </td>
               </tr>
             </table>
