--- a/flashcards.html
+++ b/flashcards.html
@@ -21,8 +21,8 @@
             <a href="#" class="back round">&#8249;</a>
             <button type="less">See less</button>
             <div class="flashcard">
-                <h3>rakkaus</h3>
-                <button id = "flip" onclick = "changeImage()"> Translation </button>
+                <div id="vocab">Rakkaus</div>
+                <button type="flip"> Translation </button>
             </div>
             <button type="more">See more</button>
             <a href="#" class="next round">&#8250;</a>
