--- a/practice.html
+++ b/practice.html
@@ -22,6 +22,8 @@
     </header>
     <hr />
     <main>
+        <h3>"Oppimisessa on vapaa uteliaisuus tehokkaampaa kuin hirveä pakko."</h3>
+        <p>- Agustinus</p>
         <div class="row">
             <div class="column">
                 <a href="flashcards.html"><img src="https://turbifycdn.com/ty/cdn/finnstyle/450buns_highres_by_JuliaKivela_P7210105.jpg" alt="Food" width: 100%></a>
