added author's name

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </main>
     <footer>
       <hr />
+      <p>Author's name: Myriam Anderson</p>
       <a href="https://github.com/myriambyu/startup.git">GitHub</a>
     </footer>
   </body>
