--- a/practice.html
+++ b/practice.html
@@ -42,6 +42,7 @@
   </body>
   <footer>
     <hr />
+    <p>Author's name: Myriam Anderson</p>
     <a href="https://github.com/myriambyu/startup.git">GitHub</a>
   </footer>
 </html>
