--- a/practice.html
+++ b/practice.html
@@ -27,16 +27,16 @@
         <p>- Agustinus</p>
         <div class="row">
             <div class="column">
-                <a href="flashcards.html"><img src="https://turbifycdn.com/ty/cdn/finnstyle/450buns_highres_by_JuliaKivela_P7210105.jpg" alt="Food" width: 100%></a>
-                <a href="flashcards.html"><p>Food</p></a>
+                <a href="flashcards.html"><img src="https://turbifycdn.com/ty/cdn/finnstyle/450buns_highres_by_JuliaKivela_P7210105.jpg" alt="Food" style="width:100%"></a>
+                <a href="flashcards.html"><p>f o o d</p></a>
             </div>
             <div class="column">
-                <a href="flashcards.html"><img src="https://www.color-hex.com/palettes/98057.png" alt="Colors" width: 100%></a>
-                <a href="flashcards.html"><p>Colors</p></a>
+                <a href="flashcards.html"><img src="https://www.color-hex.com/palettes/98057.png" alt="Colors" style="width:100%"></a>
+                <a href="flashcards.html"><p>c o l o r s</p></a>
             </div>
             <div class = "column">
-                <a href="flashcards.html"><img src ="https://media.istockphoto.com/id/1402134774/photo/professional-road-cyclist-on-a-training-ride.jpg?s=612x612&w=0&k=20&c=CB2o_DXMgH15MLa1CEqWwZVtVb3rpRgejV3UFnUwF_U=" alt="Verbs" width: 100%></a>
-                <a href="flashcards.html"><p>Verbs</p></a>
+                <a href="flashcards.html"><img src ="https://media.istockphoto.com/id/1402134774/photo/professional-road-cyclist-on-a-training-ride.jpg?s=612x612&w=0&k=20&c=CB2o_DXMgH15MLa1CEqWwZVtVb3rpRgejV3UFnUwF_U=" alt="Verbs" style="width:100%"></a>
+                <a href="flashcards.html"><p>v e r b s</p></a>
             </div>
         </div>
     </main>
