--- a/practice.html
+++ b/practice.html
@@ -8,14 +8,16 @@
   </head>
   <body>
     <header>
-        <h1>Suomi Practice</h1>
-        <nav>
-            <menu>
-              <li><a href="index.html">Login</a></li>
-              <li><a href="practice.html">Practice</a></li>
-              <li><a href="progress.html">Progress</a></li>
-            </menu>
-          </nav>
+        <div class="top-bar">
+          <h1>Suomi Practice</h1>
+          <nav>
+              <menu>
+                <li><a href="index.html">Login</a></li>
+                <li><a href="practice.html">Practice</a></li>
+                <li><a href="progress.html">Progress</a></li>
+              </menu>
+            </nav>
+        </div>
           <div class="users">
             User-name:
             <span class="User-name">Unknown</span>
