--- a/practice.html
+++ b/practice.html
@@ -22,12 +22,13 @@
             <span class="User-name">Unknown</span>
           </div>
         </div>
-          
-          <hr />
+      <hr />
     </header>
     <main>
+      <div class="quote">
         <h3>"Oppimisessa on vapaa uteliaisuus tehokkaampaa kuin hirveä pakko."</h3>
         <p>- Agustinus</p>
+      </div>
         <div class="row">
             <div class="column">
                 <a href="flashcards.html"><img src="https://turbifycdn.com/ty/cdn/finnstyle/450buns_highres_by_JuliaKivela_P7210105.jpg" alt="Food" style="width:100%"></a>
