--- a/practice.html
+++ b/practice.html
@@ -43,11 +43,13 @@
                 <a href="flashcards.html"><p>v e r b s</p></a>
             </div>
         </div>
-      </main>
+        <hr />
+      </main>  
+    <footer>
+      <div class="footer-nav">   
+        <p>Author's name: Myriam Anderson</p>
+        <a href="https://github.com/myriambyu/startup.git">GitHub</a>
+      </div>
+    </footer>
   </body>
-  <footer>
-    <hr />
-    <p>Author's name: Myriam Anderson</p>
-    <a href="https://github.com/myriambyu/startup.git">GitHub</a>
-  </footer>
 </html>
