--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
     <meta charset "UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SuomiPractice HTML</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="practice.css">
   </head>
   <body>
     <header>
-      <h1>Suomi Practice</h1>
-      <nav>
-        <menu>
-          <li><a href="index.html">Login</a></li>
-          <li><a href="practice.html">Practice</a></li>
-          <li><a href="progress.html">Progress</a></li>
-        </menu>
-      </nav>
+      <div class="top-bar">
+        <h1>Suomi Practice</h1>
+        <nav>
+            <menu>
+              <li><a href="index.html">Login</a></li>
+              <li><a href="practice.html">Practice</a></li>
+              <li><a href="progress.html">Progress</a></li>
+            </menu>
+        </nav>
+      </div>
       <hr />
     </header>
     <main>
@@ -33,8 +35,10 @@
     </main>
     <footer>
       <hr />
-      <p>Author's name: Myriam Anderson</p>
-      <a href="https://github.com/myriambyu/startup.git">GitHub</a>
+      <div class="footer-nav">   
+        <p>Author's name: Myriam Anderson</p>
+        <a href="https://github.com/myriambyu/startup.git">GitHub</a>
+      </div>
     </footer>
   </body>
 </html>
