--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <form method="get" action="practice.html">
             <label for="name">Name:</label>
             <input type="text" id="name" placeholder="Enter your name" />
-            <button type="submit">Login</button>
+            <button type="submit" class="button">Login</button>
           </form>
         </div> 
       </div>
