--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <h2>Login Here</h2>
           <form method="get" action="practice.html">
             <label for="name">Name:</label>
-            <input type="text" id="name" placeholder="Enter your name" />
+            <input type="text" class="placeholder" id="name" placeholder="Enter your name" />
             <button type="submit" class="button">Login</button>
           </form>
         </div> 
