--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
         <img src="https://media.architecturaldigest.com/photos/58f62c148bfbf566da78abef/16:9/w_2240,c_limit/Finland.jpg" width="100%">
         <div class="text-block">
           <h2>Login Here</h2>
-          <form method="get" action="practice.html">
-            <label for="name">Name:</label>
-            <input type="text" class="placeholder" id="name" placeholder="Enter your name" />
-            <button type="submit" class="button">Login</button>
-          </form>
+          <div class="login">
+            <form method="get" action="practice.html">
+              <label for="name">Name:</label>
+              <input type="text" class="placeholder" id="name" placeholder="Enter your name" />
+              <button type="submit" class="button">Login</button>
+            </form>
+          </div>
         </div> 
       </div>
     </main>
