--- a/progress.html
+++ b/progress.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <header>
+      <div class="top-bar">
         <h1>Suomi Practice</h1>
         <nav>
             <menu>
@@ -14,7 +15,13 @@
               <li><a href="practice.html">Practice</a></li>
               <li><a href="progress.html">Progress</a></li>
             </menu>
-          </nav>
+        </nav>
+        <div class="users">
+          User-name:
+          <span class="User-name">Unknown</span>
+        </div>
+      </div>
+    <hr />
     </header>
     <hr />
     <main>
@@ -79,7 +86,9 @@
   </body>
   <footer>
     <hr />
-    <p>Author's name: Myriam Anderson</p>
-    <a href="https://github.com/myriambyu/startup.git">GitHub</a>
+      <div class="footer-nav">   
+        <p>Author's name: Myriam Anderson</p>
+        <a href="https://github.com/myriambyu/startup.git">GitHub</a>
+      </div>
   </footer>
 </html>
