updated progress css

--- a/progress.html
+++ b/progress.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Progress</title>
+    <link rel="stylesheet" href="practice.css">
   </head>
   <body>
     <header>
@@ -17,8 +18,8 @@
             </menu>
         </nav>
         <div class="users">
-          User-name:
-          <span class="User-name">Unknown</span>
+          User-name: 
+          <span class="User-name"> Unknown</span>
         </div>
       </div>
     <hr />
@@ -44,7 +45,7 @@
                 <td>
                     <div>
                         <label for="users-mastered">Total users mastered: </label>
-                        <input type="text" id="count" value="0" readonly />
+                        <input type="text" class="total" id="count" value="0" readonly />
                     </div>
                 </td>
               </tr>
@@ -60,7 +61,7 @@
                 <td>
                      <div>
                         <label for="users-mastered">Total users mastered: </label>
-                        <input type="text" id="count" value="0" readonly />
+                        <input type="text" class="total" id="count" value="0" readonly />
                     </div>
                 </td>
               </tr>
@@ -75,8 +76,8 @@
                 </td>
                 <td>
                     <div>
-                        <label for="users-mastered">Total users mastered: </label>
-                        <input type="text" id="count" value="0" readonly />
+                        <label for="users-mastered" >Total users mastered: </label>
+                        <input type="text" class="total" id="count" value="0" readonly />
                     </div>
                 </td>
               </tr>
