--- a/progress.html
+++ b/progress.html
@@ -40,7 +40,7 @@
                     <p>25%</p>
                 </td>
                 <td>
-                    <a href="practice.html">Practice</a>
+                  <button class="practice"><a href="practice.html">Practice</a></button>
                 </td>
                 <td>
                     <div>
@@ -56,7 +56,7 @@
                     <p>25%</p>
                 </td>
                 <td>
-                    <a href="practice.html">Practice</a>
+                    <button class="practice"><a href="practice.html">Practice</a></button>
                 </td>
                 <td>
                      <div>
@@ -72,7 +72,7 @@
                     <p>25%</p>
                 </td>
                 <td>
-                    <a href="practice.html">Practice</a>
+                  <button class="practice"><a href="practice.html">Practice</a></button>
                 </td>
                 <td>
                     <div>
