--- a/progress.html
+++ b/progress.html
@@ -36,7 +36,7 @@
               <tr>
                 <td>
                     <label for="food-progress">Food: &nbsp; </label>
-                    <progress id="food-progress" max="100" value="25"></progress> 
+                    <progress id="food-progress" max="100" class="progress-bar" value="25"></progress> 
                     <p>25%</p>
                 </td>
                 <td>
@@ -52,7 +52,7 @@
               <tr>
                 <td>
                     <label for="colors-progress">Colors:</label>
-                    <progress id="colors-progress" max="100" value="25"></progress>
+                    <progress id="colors-progress" max="100" class="progress-bar" value="25"></progress>
                     <p>25%</p>
                 </td>
                 <td>
@@ -68,7 +68,7 @@
               <tr>
                 <td>
                     <label for="verbs-progress">Verbs: &nbsp;</label>
-                    <progress id="verbs-progress" max="100" value="25"></progress>
+                    <progress id="verbs-progress" max="100" class="progress-bar" value="25"></progress>
                     <p>25%</p>
                 </td>
                 <td>
