updated progress css

--- a/progress.html
+++ b/progress.html
@@ -27,7 +27,7 @@
     <hr />
     <main>
         <div class="progress">
-            <label for="progress">Progress of entire course:</label>
+            <label for="progress">Progress of entire course: 25%</label>
             <progress id="progress" max="100" value="25"></progress>
         </div>
         <br>
@@ -35,9 +35,9 @@
             <table id="table">
               <tr>
                 <td>
-                    <label for="food-progress">Food: &nbsp; </label>
+                    <label for="food-progress">Food: 25%&nbsp; </label>
                     <progress id="food-progress" max="100" class="progress-bar" value="25"></progress> 
-                    <p>25%</p>
+                    
                 </td>
                 <td>
                   <button class="practice"><a href="practice.html">Practice</a></button>
@@ -51,9 +51,8 @@
               </tr>
               <tr>
                 <td>
-                    <label for="colors-progress">Colors:</label>
+                    <label for="colors-progress">Colors: 25%</label>
                     <progress id="colors-progress" max="100" class="progress-bar" value="25"></progress>
-                    <p>25%</p>
                 </td>
                 <td>
                     <button class="practice"><a href="practice.html">Practice</a></button>
@@ -67,9 +66,8 @@
               </tr>
               <tr>
                 <td>
-                    <label for="verbs-progress">Verbs: &nbsp;</label>
-                    <progress id="verbs-progress" max="100" class="progress-bar" value="25"></progress>
-                    <p>25%</p>
+                    <label for="verbs-progress">Verbs: 25% &nbsp;</label>
+                    <progress id="verbs-progress" max="100" class="progress-bar" value="25"></progress>                  
                 </td>
                 <td>
                   <button class="practice"><a href="practice.html">Practice</a></button>
