--- a/flashcards.html
+++ b/flashcards.html
@@ -27,12 +27,12 @@
         <main>
             <div class="flash-content">
                 <a href="#" class="round">&#8249;</a>
-                <button type="less">See less</button>
+                <button type="less" class="see">See less</button>
                 <div class="flashcard">
                     <div id="vocab" class="card">Rakkaus</div>
-                    <button type="flip"> Translation </button>
+                    <button type="flip" class="button"> Translation </button>
                 </div>
-                <button type="more">See more</button>
+                <button type="more" class="see">See more</button>
                 <a href="#" class="round">&#8250;</a>
             </div>
         </main>
