--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset "UTF-8" />
+    <meta charset ="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SuomiPractice HTML</title>
+    <script src="login.js"></script>
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
@@ -29,7 +30,7 @@
             <form method="get" action="practice.html">
               <label for="name">Name:</label>
               <input type="text" class="placeholder" id="name" placeholder="Enter your name" />
-              <button type="submit" class="button">Login</button>
+              <button type="submit" class="button" oneclick="login()">Login</button>
             </form>
           </div>
         </div> 
