--- a/practice.html
+++ b/practice.html
@@ -19,7 +19,7 @@
           </nav>
           <div class="users">
             User-name: 
-            <span class="User-name"> Unknown</span>
+            <span class="User-name"></span>
           </div>
         </div>
       <hr />
@@ -51,5 +51,6 @@
         <a href="https://github.com/myriambyu/startup.git">GitHub</a>
       </div>
     </footer>
+    <script src="practice.js"></script>
   </body>
 </html>
