--- a/index.html
+++ b/index.html
@@ -28,20 +28,14 @@
           <h2>Login Here</h2>
           <form id="loginForm">
             <div class="login">
-              <label for="name">Name:</label>
-              <input type="text" class="placeholder" id="name" placeholder="Enter your name" />
-              <button type="submit" class="button" onclick="login()">Login</button>
+              <label for="username">Name:</label>
+              <input type="text" class="placeholder" id="username" name="username" placeholder="Enter your name" />
+              <button type="submit" class="button">Login</button>
             </div>
-            <div id="userInfo" style="display: none;">
-              <h3>Welcome <span id="loggedInUsername"></span>!</h3>
-            </div>
+          </form>
+          <div id="userInfo" style="display: none;">
             <h3>Welcome <span id="loggedInUsername"></span>!</h3>
-          </form>
-          <form id="loginForm">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username"><br><br>
-            <button type="submit">Login</button>
-          </form>
+          </div>
         </div> 
       </div>
     </main>
