updated username display

--- a/index.html
+++ b/index.html
@@ -28,14 +28,11 @@
           <h2>Login Here</h2>
           <form id="loginForm">
             <div class="login">
-              <label for="username">Name:</label>
-              <input type="text" class="placeholder" id="username" name="username" placeholder="Enter your name" />
+              <label for="username">Username:</label>
+              <input class = "placeholder" type="text" id="username" name="username"><br><br>
               <button type="submit" class="button">Login</button>
             </div>
           </form>
-          <div id="userInfo" style="display: none;">
-            <h3>Welcome <span id="loggedInUsername"></span>!</h3>
-          </div>
         </div> 
       </div>
     </main>
