--- a/practice.html
+++ b/practice.html
@@ -18,8 +18,9 @@
               </menu>
           </nav>
           <div class="users">
-            User-name: 
-            <span class="User-name"></span>
+            <div id="userInfo">
+              <p>User-name: <span id="loggedInUsername"></span></p>
+            </div>
           </div>
         </div>
       <hr />
