--- a/flashcards.html
+++ b/flashcards.html
@@ -18,8 +18,9 @@
                     </menu>
                 </nav>
                 <div class="users">
-                  User-name: 
-                  <span class="User-name"> Unknown</span>
+                    <div id="userInfo">
+                        <p>User-name: <span id="loggedInUsername"></span></p>
+                    </div>
                 </div>
               </div>
             <hr />
@@ -36,13 +37,14 @@
                 <a href="#" class="round">&#8250;</a>
             </div>
         </main>
-    </body>
-    <footer>
-        <hr />
-        <div class="footer-nav">   
-          <p>Author's name: Myriam Anderson</p>
-          <a href="https://github.com/myriambyu/startup.git">GitHub</a>
-        </div>
-    </footer>
+        <footer>
+            <hr />
+            <div class="footer-nav">   
+                <p>Author's name: Myriam Anderson</p>
+                <a href="https://github.com/myriambyu/startup.git">GitHub</a>
+            </div>
+        </footer>
+        <script src="flashcards.js"></script>
+    </body> 
 </html>
     
