--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           <h2>Login Here</h2>
           <form id="loginForm">
             <div class="login">
-              <label for="username">Username:</label>
-              <input class = "placeholder" type="text" id="username" name="username"><br><br>
+              <label for="username">Name:</label>
+              <input class = "placeholder" type="text" id="username" name="username" placeholder="Enter your name">
               <button type="submit" class="button">Login</button>
             </div>
           </form>
