--- a/progress.html
+++ b/progress.html
@@ -18,8 +18,9 @@
             </menu>
         </nav>
         <div class="users">
-          User-name: 
-          <span class="User-name"> Unknown</span>
+          <div id="userInfo">
+            <p>User-name: <span id="loggedInUsername"></span></p>
+        </div>
         </div>
       </div>
     <hr />
@@ -82,12 +83,14 @@
             </table>
           </section>
     </main>
-  </body>
-  <footer>
-    <hr />
+    <footer>
+      <hr />
       <div class="footer-nav">   
         <p>Author's name: Myriam Anderson</p>
         <a href="https://github.com/myriambyu/startup.git">GitHub</a>
       </div>
-  </footer>
+    </footer>
+    <script src="progress.js"></script>
+  </body>
+  
 </html>
