--- a/flashcards.html
+++ b/flashcards.html
@@ -27,14 +27,17 @@
         </header>
         <main>
             <div class="flash-content">
-                <a href="#" class="round">&#8249;</a>
+                <button id ="prev" class="round">&#8249;</button>
                 <button type="less" class="see">See less</button>
                 <div class="flashcard">
-                    <div id="vocab" class="card">Rakkaus</div>
+                    <div id="vocab" class="card">
+                        <div class="front">Rakkaus</div>
+                        <div class="back">Love</div>
+                    </div>
                     <button type="flip" class="button"> Translation </button>
                 </div>
                 <button type="more" class="see">See more</button>
-                <a href="#" class="round">&#8250;</a>
+                <button id="next" class="round">&#8250;</button>
             </div>
         </main>
         <footer>
