--- a/flashcards.html
+++ b/flashcards.html
@@ -31,8 +31,8 @@
                 <button type="less" class="see">See less</button>
                 <div class="flashcard">
                     <div id="vocab" class="card">
-                        <div class="front">Rakkaus</div>
-                        <div class="back">Love</div>
+                        <div class="side front">Rakkaus</div>
+                        <div class="side back">Love</div>
                     </div>
                     <button type="flip" class="button"> Translation </button>
                 </div>
