--- a/flashcards.html
+++ b/flashcards.html
@@ -34,7 +34,7 @@
                         <div class="side front">Rakkaus</div>
                         <div class="side back">Love</div>
                     </div>
-                    <button type="flip" class="button"> Translation </button>
+                    <button type="flip" onclick="populateNextCard()" class="button"> Translation </button>
                 </div>
                 <button type="more" class="see">See more</button>
                 <button id="next" class="round">&#8250;</button>
