--- a/flashcards.html
+++ b/flashcards.html
@@ -37,7 +37,7 @@
                     <button type="flip" onclick="populateNextCard()" class="button"> Translation </button>
                 </div>
                 <button type="more" class="see">See more</button>
-                <button id="next" onclick="getNextCard()" class="round">&#8250;</button>
+                <button id="next" onclick="resetCard(); getNextCard();" class="round">&#8250;</button>
             </div>
         </main>
         <footer>
