removed translate button

--- a/flashcards.html
+++ b/flashcards.html
@@ -31,10 +31,9 @@
                 <button type="less" class="see">See less</button>
                 <div class="flashcard">
                     <div id="vocab" class="card">
-                        <div class="side front">Rakkaus</div>
-                        <div class="side back">Love</div>
+                        <div class="side front">rakkaus</div>
+                        <div class="side back">love</div>
                     </div>
-                    <button type="flip" onclick="populateNextCard()" class="button"> Translation </button>
                 </div>
                 <button type="more" class="see">See more</button>
                 <button id="next" onclick="resetCard(); getNextCard();" class="round">&#8250;</button>
