updated progress bars

--- a/progress.html
+++ b/progress.html
@@ -37,7 +37,7 @@
               <tr>
                 <td>
                     <label for="food-progress">Food: 25%&nbsp; </label>
-                    <progress id="food-progress" max="100" class="progress-bar" value="25"></progress> 
+                    <progress id="progress-bar" max="100" class="progress-bar"></progress> 
                     
                 </td>
                 <td>
