--- a/progress.html
+++ b/progress.html
@@ -52,7 +52,7 @@
                 <td>
                     <div>
                         <label for="users-mastered">Total users mastered: </label>
-                        <input type="text" class="total" id="count" value="0" readonly />
+                        <input type="text" class="total" id="countFood" value="0" readonly />
                     </div>
                 </td>
               </tr>
@@ -70,7 +70,7 @@
                 <td>
                      <div>
                         <label for="users-mastered">Total users mastered: </label>
-                        <input type="text" class="total" id="count" value="0" readonly />
+                        <input type="text" class="total" id="countColors" value="0" readonly />
                     </div>
                 </td>
               </tr>
@@ -88,7 +88,7 @@
                 <td>
                     <div>
                         <label for="users-mastered" >Total users mastered: </label>
-                        <input type="text" class="total" id="count" value="0" readonly />
+                        <input type="text" class="total" id="countVerbs" value="0" readonly />
                     </div>
                 </td>
               </tr>
