--- a/Public/progress.html
+++ b/Public/progress.html
@@ -94,6 +94,7 @@
               </tr>
             </table>
           </section>
+          <div id = "weekUser"></div>
     </main>
     <footer>
       <hr />
