--- a/Public/index.html
+++ b/Public/index.html
@@ -6,6 +6,12 @@
     <title>SuomiPractice HTML</title>
     <script src="login.js"></script>
     <link rel="stylesheet" href="main.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <header>
@@ -26,13 +32,25 @@
         <img src="https://media.architecturaldigest.com/photos/58f62c148bfbf566da78abef/16:9/w_2240,c_limit/Finland.jpg" width="100%">
         <div class="text-block">
           <h2>Login Here</h2>
-          <form id="loginForm">
-            <div class="login">
-              <label for="username">Name:</label>
-              <input class = "placeholder" type="text" id="username" name="username" placeholder="Enter your name">
-              <button type="submit" class="button">Login</button>
+          <div id="loginControls">
+            <div class="input-group mb-3">
+              <span class="input-group-text">@</span>
+              <input class="form-control" type="text" id="userName" placeholder="your@email.com" />
             </div>
-          </form>
+            <div class="input-group mb-3">
+              <span class="input-group-text">🔒</span>
+              <input class="form-control" type="password" id="userPassword" placeholder="password" />
+            </div>
+            <button type="button" class="btn btn-primary" onclick="loginUser()">Login</button>
+            <button type="button" class="btn btn-primary" onclick="createUser()">Create</button>
+          </div>
+          <!-- Displayed when ready to play -->
+          <div id="playControls" style="display: none">
+            <div id="playerName"></div>
+            <button type="button" class="btn btn-primary" onclick="play()">Practice</button>
+            <button type="button" class="btn btn-secondary" onclick="logout()">Logout</button>
+          </div>
+        </div>
         </div> 
       </div>
     </main>
@@ -43,5 +61,10 @@
         <a href="https://github.com/myriambyu/startup.git">GitHub</a>
       </div>
     </footer>
+    <script>
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    </script>
   </body>
 </html>
