--- a/Public/index.html
+++ b/Public/index.html
@@ -47,7 +47,7 @@
           <!-- Displayed when ready to play -->
           <div id="playControls" style="display: none">
             <div id="username"></div>
-            <button type="button" class="btn btn-primary" onclick="play()">Practice</button>
+            <button type="button" class="btn btn-primary" onclick="practice()">Practice</button>
             <button type="button" class="btn btn-secondary" onclick="logout()">Logout</button>
           </div>
         </div>
