--- a/Public/index.html
+++ b/Public/index.html
@@ -17,7 +17,7 @@
       <div class="top-bar">
         <h1>Suomi Practice</h1>
         <nav>
-            <menu>
+            <menu style="display: none">
               <li><a href="index.html">Login</a></li>
               <li><a href="practice.html">Practice</a></li>
               <li><a href="progress.html">Progress</a></li>
