--- a/Public/flashcards.html
+++ b/Public/flashcards.html
@@ -38,6 +38,7 @@
                 <button type="more" class="see">See more</button>
                 <button id="next" onclick="resetCard(); getNextCard();" class="round">&#8250;</button>
             </div>
+            <div id = "masteredUser">hello</div>
         </main>
         <footer>
             <hr />
